try increasing memory when running tests